--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
-[package]
-name = "risp"
-version = "0.1.0"
-authors = ["Chris <chris.clark@coffeeb4code.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = [
+	"parser",
+	"project",
+	"formatter",
+	"minifier",
+	"compiler",
+	"runner",
+	"repl",
+	"arch",
+	"discr",
+	"discd",
+	"bench"
+]
